cmake_minimum_required(VERSION 3.27)
project(lab3)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab3
        .idea/inspectionProfiles/Project_Default.xml
        .idea/.gitignore
        .idea/lab3.iml
        .idea/modules.xml
        .idea/workspace.xml
        x64/Debug/lab3.tlog/CL.command.1.tlog
        x64/Debug/lab3.tlog/Cl.items.tlog
        x64/Debug/lab3.tlog/CL.read.1.tlog
        x64/Debug/lab3.tlog/CL.write.1.tlog
        x64/Debug/lab3.tlog/lab3.lastbuildstate
        x64/Debug/lab3.tlog/link.command.1.tlog
        x64/Debug/lab3.tlog/link.read.1.tlog
        x64/Debug/lab3.tlog/link.write.1.tlog
        x64/Debug/lab3.Build.CppClean.log
        x64/Debug/lab3.exe
        x64/Debug/lab3.exe.recipe
        x64/Debug/lab3.ilk
        x64/Debug/lab3.log
        x64/Debug/lab3.obj
        x64/Debug/lab3.pdb
        x64/Debug/lab3.vcxproj.FileListAbsolute.txt
        x64/Debug/vc143.idb
        x64/Debug/vc143.pdb
        lab3.cpp
        lab3.sln
        lab3.vcxproj
        lab3.vcxproj.filters
        lab3.vcxproj.user)
